# erbsland-cpp-color-term

./: .buildinfo  .clang-format  .clang-format-ignore  .gitignore  .gitmodules  CMakeLists.txt  CNAME  README.md  genindex.html  index.html  objects.inv  search.html  searchindex.js
demo/: CMakeLists.txt
demo/bitmap-showcase/: CMakeLists.txt
demo/bitmap-showcase/src/: BitmapShowcaseApp.cpp  BitmapShowcaseApp.hpp  main.cpp
demo/command-line-help/: CMakeLists.txt
demo/command-line-help/src/: CommandLineHelpDemo.cpp  CommandLineHelpDemo.hpp  CommandLineHelpModel.cpp  CommandLineHelpModel.hpp  main.cpp
demo/common/: CMakeLists.txt
demo/common/src/: CMakeLists.txt  DemoError.hpp  Main.hpp  ScopedTerminalSession.cpp  ScopedTerminalSession.hpp  TerminalApplication.cpp  TerminalApplication.hpp  UiDemoApplication.cpp  UiDemoApplication.hpp
demo/display-all-attributes/: CMakeLists.txt
demo/display-all-attributes/src/: DisplayAllAttributesApp.cpp  DisplayAllAttributesApp.hpp  main.cpp
demo/display-all-colors/: CMakeLists.txt
demo/display-all-colors/src/: DisplayAllColorsApp.cpp  DisplayAllColorsApp.hpp  main.cpp
demo/frame-color-animations/: CMakeLists.txt
demo/frame-color-animations/src/: FrameColorAnimationsApp.cpp  FrameColorAnimationsApp.hpp  main.cpp
demo/frame-weaver/: CMakeLists.txt
demo/frame-weaver/src/: FrameWeaverApp.cpp  FrameWeaverApp.hpp  main.cpp
demo/grid-layout/: CMakeLists.txt
demo/grid-layout/src/: GridLayoutApp.cpp  GridLayoutApp.hpp  main.cpp
demo/html-viewer/: CMakeLists.txt
demo/html-viewer/data/: demo-document.html  demo-nested-lists.html  demo-tea.html
demo/html-viewer/src/: HtmlViewerApp.cpp  HtmlViewerApp.hpp  main.cpp
demo/key-input-demo/: CMakeLists.txt
demo/key-input-demo/src/: KeyInputDemoApp.cpp  KeyInputDemoApp.hpp  main.cpp
demo/log-viewer/: CMakeLists.txt
demo/log-viewer/src/: LogViewerApp.cpp  LogViewerApp.hpp  main.cpp
demo/minimum-effort/: CMakeLists.txt
demo/minimum-effort/src/: main.cpp
demo/retro-plasma/: CMakeLists.txt
demo/retro-plasma/src/: PlasmaRenderer.cpp  PlasmaRenderer.hpp  RetroPlasmaApp.cpp  RetroPlasmaApp.hpp  main.cpp
demo/terminal-chronicle/: CMakeLists.txt
demo/terminal-chronicle/src/: StoryDemo.cpp  StoryDemo.hpp  main.cpp
demo/text-gallery/: CMakeLists.txt
demo/text-gallery/src/: TextGalleryApp.cpp  TextGalleryApp.hpp  main.cpp
demo/ui-choice/: CMakeLists.txt
demo/ui-choice/src/: UiChoiceApp.cpp  UiChoiceApp.hpp  main.cpp
demo/ui-hello-world/: CMakeLists.txt
demo/ui-hello-world/src/: UiHelloWorldApp.cpp  UiHelloWorldApp.hpp  main.cpp
demo/ui-html-viewer/: CMakeLists.txt
demo/ui-html-viewer/src/: HtmlDocumentPanel.cpp  HtmlDocumentPanel.hpp  UiHtmlViewerApp.cpp  UiHtmlViewerApp.hpp  main.cpp
demo/ui-sections/: CMakeLists.txt
demo/ui-sections/src/: UiSectionsApp.cpp  UiSectionsApp.hpp  main.cpp
demo/ui-world-view/: CMakeLists.txt
demo/ui-world-view/data/: world-map.txt
demo/ui-world-view/src/: UiWorldViewApp.cpp  UiWorldViewApp.hpp  WorldMapData.cpp  WorldMapData.hpp  WorldMapView.cpp  WorldMapView.hpp  main.cpp
demo/ui-world-view/tools/: convert_ui_world_view_data.py
demo/update-screen-modes/: CMakeLists.txt
demo/update-screen-modes/src/: FlushSpeedTracker.hpp  UpdateScreenModesApp.cpp  UpdateScreenModesApp.hpp  UpdateScreenModesState.hpp  main.cpp
doc/tools/: CMakeLists.txt  drawing-reference.cpp  drawing-text-reference.cpp  font-reference.cpp  generate_demo_captures.py  geometry-reference.cpp  paragraph-options-reference.cpp
src/erbsland/cterm/: Alignment.hpp  Anchor.hpp  Backend.hpp  Bitmap.cpp  Bitmap.hpp  BitmapDrawOptions.cpp  BitmapDrawOptions.hpp  Buffer.cpp  Buffer.hpp  BufferDrawOptions.hpp  BufferResizeMode.hpp  BufferView.cpp  BufferView.hpp  CMakeLists.txt  Char.cpp  Char.hpp  Char16Style.cpp  Char16Style.hpp  CharAttributes.hpp  CharCombinationStyle.cpp  CharCombinationStyle.hpp  CharStyle.hpp  Color.cpp  Color.hpp  ColorPart.cpp  ColorPart.hpp  ColorRole.hpp  ColorSequence.cpp  ColorSequence.hpp  Coordinate.hpp  CropEdges.hpp  CursorBuffer.cpp  CursorBuffer.hpp  CursorWriter.hpp  Direction.cpp  Direction.hpp  EncodingErrors.hpp  FastCharSet.cpp  FastCharSet.hpp  Font.cpp  (+60 more)
src/erbsland/cterm/geometry/: Alignment.hpp  Anchor.hpp  AxisMapper.hpp  CMakeLists.txt  Direction.cpp  Direction.hpp  Margins.hpp  Orientation.hpp  Position.cpp  Position.hpp  Rectangle.cpp  Rectangle.hpp  Size.cpp  Size.hpp  all.hpp
src/erbsland/cterm/impl/: BitmapPainter.cpp  BitmapPainter.hpp  CMakeLists.txt  CombinedChar.cpp  CombinedChar.hpp  CommonBoxFrameCombinationStyle.cpp  CommonBoxFrameCombinationStyle.hpp  CommonBoxFrameCombinationStyle_data.cpp  CommonBoxFrameStyle.cpp  FontDefaultAscii.cpp  FrameBorder_data.hpp  FramePainter.cpp  FramePainter.hpp  HashHelper.hpp  InputBackend.cpp  InputBackend.hpp  InputFactory.hpp  InputPosix.cpp  InputPosix.hpp  InputWin32.cpp  InputWin32.hpp  KeyDecoder.cpp  KeyDecoder.hpp  LineBuffer.hpp  ParagraphLayout.cpp  ParagraphLayout.hpp  ParagraphPainter.cpp  ParagraphPainter.hpp  ParagraphPrinter.cpp  ParagraphPrinter.hpp  ParagraphRendererBase.cpp  ParagraphRendererBase.hpp  PosixBackend.cpp  (+30 more)
test/profiling/html-renderer/: CMakeLists.txt
test/unittest/: CMakeLists.txt
test/unittest/src/: AlignmentTest.cpp  AnchorTest.cpp  ApiWrapperDispatchTest.cpp  BackendTest.cpp  BitmapDrawOptionsTest.cpp  BitmapTest.cpp  BlockBufferTest.cpp  BufferConvenienceTest.cpp  BufferTestHelper.hpp  BufferViewTest.cpp  CMakeLists.txt  Char16StyleTest.cpp  CharCombinationStyleTest.cpp  CharStyleTest.cpp  CharTest.cpp  ColorParsingTest.cpp  ColorSequenceTest.cpp  ColorTest.cpp  CombinedCharTest.cpp  CropEdgesTest.cpp  CursorBufferTest.cpp  CursorBufferTestBase.hpp  DirectionTest.cpp  FontTest.cpp  FrameDrawOptionsTest.cpp  HashHelperTest.cpp  InputDefinitionTest.cpp  KeyDecoderTest.cpp  KeyPressTest.cpp  MarginsTest.cpp  ParagraphOptionsTest.cpp  PositionTest.cpp  RectangleTest.cpp  RemappedBufferTest.cpp  SizeTest.cpp  StringConversionTest.cpp  TermStringTest.cpp  TerminalConvenienceTest.cpp  TerminalFlagsTest.cpp  TerminalTest.cpp  (+9 more)
(+1668 files in other folders)
