# Copyright (c) 2026 Tobias Erbsland - https://erbsland.dev
# SPDX-License-Identifier: Apache-2.0

cmake_minimum_required(VERSION 3.28)

add_subdirectory(impl)
add_subdirectory(text)
add_subdirectory(ui)
target_sources(erbsland-color-term PRIVATE
        Alignment.hpp
        Anchor.hpp
        Backend.hpp
        Bitmap.cpp
        Bitmap.hpp
        BitmapDrawOptions.cpp
        BitmapDrawOptions.hpp
        BufferResizeMode.hpp
        Buffer.cpp
        Buffer.hpp
        BufferDrawOptions.hpp
        BufferView.cpp
        BufferView.hpp
        Char.cpp
        Char.hpp
        CharAttributes.hpp
        CharStyle.hpp
        Char16Style.cpp
        Char16Style.hpp
        CharCombinationStyle.cpp
        CharCombinationStyle.hpp
        CursorBuffer.cpp
        CursorBuffer.hpp
        CursorWriter.hpp
        Color.cpp
        Color.hpp
        ColorPart.cpp
        ColorPart.hpp
        ColorRole.hpp
        ColorSequence.cpp
        ColorSequence.hpp
        Coordinate.hpp
        CropEdges.hpp
        Direction.cpp
        Direction.hpp
        EncodingErrors.hpp
        FastCharSet.cpp
        FastCharSet.hpp
        Font.cpp
        Font.hpp
        FontGlyph.hpp
        FrameDrawOptions.cpp
        FrameDrawOptions.hpp
        FrameStyle.hpp
        Input.hpp
        InputDefinition.cpp
        InputDefinition.hpp
        IndexRange.hpp
        Key.cpp
        Key.hpp
        Margins.hpp
        MoveMode.hpp
        Orientation.hpp
        ParagraphBackgroundMode.hpp
        ParagraphIndents.hpp
        ParagraphOnError.hpp
        ParagraphOptions.cpp
        ParagraphOptions.hpp
        ParagraphSpacing.hpp
        Position.cpp
        Position.hpp
        ReadableBuffer.cpp
        ReadableBuffer.hpp
        Rectangle.cpp
        Rectangle.hpp
        RemappedBuffer.cpp
        RemappedBuffer.hpp
        Size.cpp
        Size.hpp
        String.cpp
        String.hpp
        StringView.cpp
        StringView.hpp
        Terminal.cpp
        Terminal.hpp
        TerminalFlags.hpp
        TerminalSession.hpp
        TabOverflowBehavior.hpp
        Text.hpp
        TextAnimation.hpp
        TextOptions.cpp
        TextOptions.hpp
        Tile9Style.cpp
        Tile9Style.hpp
        UpdateSettings.cpp
        UpdateSettings.hpp
        WritableBuffer.cpp
        WritableBuffer.hpp
)
