# Copyright (c) 2026 Tobias Erbsland - https://erbsland.dev
# SPDX-License-Identifier: Apache-2.0

cmake_minimum_required(VERSION 3.28)

add_subdirectory(impl)
add_subdirectory(geometry)
add_subdirectory(text)
add_subdirectory(theme)
add_subdirectory(ui)
target_sources(erbsland-color-term PRIVATE
        Backend.hpp
        Bitmap.cpp
        Bitmap.hpp
        BitmapDrawOptions.cpp
        BitmapDrawOptions.hpp
        BufferResizeMode.hpp
        Buffer.cpp
        Buffer.hpp
        BufferDrawOptions.hpp
        BufferView.cpp
        BufferView.hpp
        Char.cpp
        Char.hpp
        WriteClippedBuffer.hpp
        CharAttributes.hpp
        CharStyle.hpp
        Char16Style.cpp
        Char16Style.hpp
        CharCombinationStyle.cpp
        CharCombinationStyle.hpp
        CursorBuffer.cpp
        CursorBuffer.hpp
        CursorWriter.hpp
        Color.cpp
        Color.hpp
        ColorPart.cpp
        ColorPart.hpp
        ColorRole.hpp
        ColorSequence.cpp
        ColorSequence.hpp
        CropEdges.hpp
        EncodingErrors.hpp
        FastCharSet.cpp
        FastCharSet.hpp
        Font.cpp
        Font.hpp
        FontGlyph.hpp
        FrameBorder.cpp
        FrameBorder.hpp
        FrameBorderElement.hpp
        FrameDrawOptions.cpp
        FrameDrawOptions.hpp
        FrameStyle.hpp
        GridLayout.cpp
        GridLayout.hpp
        Input.hpp
        InputDefinition.cpp
        InputDefinition.hpp
        IndexRange.hpp
        Key.cpp
        Key.hpp
        KeyModifiers.hpp
        Keys.cpp
        Keys.hpp
        MoveMode.hpp
        ParagraphBackgroundMode.hpp
        ParagraphIndents.hpp
        ParagraphOnError.hpp
        ParagraphOptions.cpp
        ParagraphOptions.hpp
        ParagraphSpacing.hpp
        ReadableBuffer.cpp
        ReadableBuffer.hpp
        RemappedBuffer.cpp
        RemappedBuffer.hpp
        String.cpp
        String.hpp
        StringView.cpp
        StringView.hpp
        Terminal.cpp
        Terminal.hpp
        TerminalFlags.hpp
        TerminalSession.hpp
        TabOverflowBehavior.hpp
        Text.hpp
        TextAnimation.hpp
        TextOptions.cpp
        TextOptions.hpp
        Tile9Style.cpp
        Tile9Style.hpp
        UpdateSettings.cpp
        UpdateSettings.hpp
        WritableBuffer.cpp
        WritableBuffer.hpp
)
